# labproc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
annotation/: CHANGELOG.md  LICENSE  Makefile  PAPER.md  README.md  SKILL.md  pyproject.toml  requirements.txt
annotation/examples/: annotations.example.json
annotation/references/: label-rules.md  labels.md  output-format.md
annotation/references/vocabularies/: action.md  equipment.md  substance.md
annotation/scripts/: append_to_master.py  build_bundle.py  extract_frames.sh  run_pipeline.sh
annotation/src/tacit_annotator/: __init__.py  append.py  audit.py  bundle.py  cli.py  extract.py  label.py  prompts.py  run.py  schema.py
annotation/tests/: test_append.py  test_extract.py  test_prompts.py  test_schema.py
labproc_tacit/: __init__.py  data.py  encoder.py  video_io.py
labproc_tacit/probes/: __init__.py  ccr.py  ccr_same_state.py  psc.py  ted.py  ted_visual.py  vsd.py
reproduce_paper/: README.md  adapt_v3.py  extract_features.py  sweep_ccr_antisymmetric_per_epoch.py  sweep_ccr_only_per_epoch.py  sweep_ccr_same_state_antisymmetric_per_epoch.py  sweep_ccr_same_state_per_epoch.py  sweep_psc_ccr_per_epoch.py  sweep_ted_per_epoch.py  sweep_vsd_ted_visual_per_epoch.py  train_ccr_same_state.py  train_psc_ccr_probes.py  train_ted_probes.py  train_ted_visual_siamese_probe.py  train_vsd_pad_probes.py
scripts/: evaluate_ccr.py  evaluate_ccr_same_state.py  evaluate_psc.py  evaluate_ted.py  evaluate_ted_visual.py  evaluate_vsd.py
