[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacit-annotator"
version = "9.0.0"
description = "Hierarchical physical-state labeling for laboratory procedure videos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tacit team" }]
keywords = ["video annotation", "lab procedures", "world model", "training data", "PCR", "organic chemistry", "western blot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "anthropic>=0.40.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML",
]

[project.scripts]
tacit-annotate = "tacit_annotator.cli:main"

[project.urls]
Homepage = "https://github.com/tacit-ai/tacit-video-annotator"
Repository = "https://github.com/tacit-ai/tacit-video-annotator"
Issues = "https://github.com/tacit-ai/tacit-video-annotator/issues"
Changelog = "https://github.com/tacit-ai/tacit-video-annotator/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tacit_annotator = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
